# Explorations

./: .gitignore  CLAUDE.md  COMPLETION_SUMMARY.md  FEATURE_ANALYSIS_README.md  Ideas.md  QUICKSTART.md  README.md  add_remaining_models.py  annotated_transformer.py  climate_models_blog.ipynb  climate_models_blog.py  complete_notebook.py  execute_and_pdf.py  execution_log.txt  feature_analysis.py  finalize_notebook.py  generate_notebook.py  portfolio_optimization.py  pyproject.toml  quick_example.py  requirements.txt
__marimo__/session/: annotated_transformer.py.json  climate_models_blog.py.json  quick_example.py.json
copilot reports/: ANNOTATED_TRANSFORMER_COMPLETION.md  ANNOTATED_TRANSFORMER_README.md  CLIMATE_MODELS_README.md  COMPLETION_SUMMARY.md  FIXES_SUMMARY.md  PROJECT_SUMMARY.md  TRANSFORMER_README.md  TRANSFORMER_STATUS.md  UV_SETUP.md
old scripts/: add_remaining_models.py  climate_models_blog.html  climate_models_blog.ipynb  climate_models_implementations.py  complete_notebook.py  convert_to_marimo.py  run.sh  test.py  test_comprehensive.py  test_transformer.py  validate_notebook.py
